--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,87 @@
-# Unsplash API Configuration
-# Get your keys at: https://unsplash.com/oauth/applications
-UNSPLASH_ACCESS_KEY=your_access_key_here
-UNSPLASH_SECRET_KEY=your_secret_key_here
+# ===========================================
+# POCKETBASE CORE SETTINGS
+# ===========================================
+PB_APP_NAME=TechStore E-commerce
+PB_APP_URL=http://localhost:8090
+PB_DEBUG=false
+PB_ENV=development
 
-# Pocketbase Configuration
-POCKETBASE_ADMIN_EMAIL=admin@ecommerce.local
-POCKETBASE_ADMIN_PASSWORD=Admin123!
+# ===========================================
+# ENCRYPTION (User must set - 32 characters random string)
+# Generate: openssl rand -base64 32
+# ===========================================
+PB_ENCRYPTION_KEY=
 
-# Database Configuration
-DB_TYPE=sqlite
-DB_PATH=/pb_data/data.db
+# ===========================================
+# SMTP SETTINGS
+# ===========================================
+PB_SMTP_ENABLED=false
+PB_SMTP_HOST=
+PB_SMTP_PORT=587
+PB_SMTP_USERNAME=
+PB_SMTP_PASSWORD=
+PB_SMTP_AUTH_METHOD=PLAIN
+PB_SMTP_TLS=true
+PB_SMTP_LOCAL_NAME=
+PB_SENDER_NAME=TechStore Support
+PB_SENDER_ADDRESS=noreply@techstore.local
 
-# Application Configuration
-APP_ENV=development
-APP_DEBUG=true
+# ===========================================
+# S3 STORAGE SETTINGS
+# ===========================================
+PB_S3_ENABLED=false
+PB_S3_BUCKET=
+PB_S3_REGION=
+PB_S3_ENDPOINT=
+PB_S3_ACCESS_KEY=
+PB_S3_SECRET=
+PB_S3_FORCE_PATH_STYLE=false
+
+# ===========================================
+# BACKUPS SETTINGS
+# ===========================================
+PB_BACKUPS_CRON=0 0 * * *
+PB_BACKUPS_CRON_MAX_KEEP=3
+PB_BACKUPS_S3_ENABLED=false
+PB_BACKUPS_S3_BUCKET=
+PB_BACKUPS_S3_REGION=
+PB_BACKUPS_S3_ENDPOINT=
+PB_BACKUPS_S3_ACCESS_KEY=
+PB_BACKUPS_S3_SECRET=
+
+# ===========================================
+# LOGS SETTINGS
+# ===========================================
+PB_LOGS_MAX_DAYS=7
+PB_LOGS_MIN_LEVEL=0
+PB_LOGS_LOG_IP=true
+PB_LOGS_LOG_AUTH_ID=true
+
+# ===========================================
+# RATE LIMITING
+# Format: label|audience|duration|maxRequests (semicolon-separated)
+# Example: *:auth||3|2;*:create||5|20;/api/batch||1|3;/api/||10|300
+# ===========================================
+PB_RATE_LIMITS_ENABLED=false
+PB_RATE_LIMITS_RULES=
+
+# ===========================================
+# TRUSTED PROXY
+# Comma-separated headers: X-Real-IP,X-Forwarded-For
+# ===========================================
+PB_TRUSTED_PROXY_HEADERS=
+PB_TRUSTED_PROXY_USE_LEFTMOST_IP=false
+
+# ===========================================
+# BATCH REQUESTS
+# ===========================================
+PB_BATCH_ENABLED=true
+PB_BATCH_MAX_REQUESTS=100
+PB_BATCH_TIMEOUT=120
+
+# ===========================================
+# UNSPLASH API (Optional - for product images)
+# Get keys at: https://unsplash.com/developers
+# ===========================================
+UNSPLASH_ACCESS_KEY=
+UNSPLASH_SECRET_KEY=
