--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,11 +2,10 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ main ]
-    tags: [ 'v*.*.*' ]
+    tags: [ 'v*.*.*' ]  # ✅ SOLO su tag
   pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [ main, develop ]  # ✅ Test PR
+  workflow_dispatch:  # ✅ Manual trigger
 
 env:
   REGISTRY: ghcr.io
@@ -43,12 +42,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
