feat:Add user admin to env variables & update readme

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ PB_APP_NAME=TechStore E-commerce
 PB_APP_URL=http://localhost:8090
 PB_DEBUG=false
 PB_ENV=development
+PB_ADMIN_EMAIL=admin@ecommerce.local
+PB_ADMIN_PASSWORD=Admin123!
 
 # ===========================================
 # ENCRYPTION (User must set - 32 characters random string)
